--- a/CA1_notebook.ipynb
+++ b/CA1_notebook.ipynb
@@ -299,6 +299,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "97c7e22b",
+   "metadata": {},
+   "source": [
+    "## Columns to be dropped\n",
+    "\n",
+    "- \"STATISTIC\" and \"STATISTIC Label\" are only variables of the datasets; neither one contains any information about the dataset. As a result, both columns have been removed.\n",
+    "\n",
+    "- The information in \"TLIST(A1)\" is identical to that in the \"Year\" column, making it a redundant column. The duplicate column has been eliminated as a result.\n",
+    "\n",
+    "- The \"Component\" column and the column \"C02541V03076\" both encode the same data. In essence, it serves as the component variable's label. As a result, this column has been removed.\n",
+    "\n",
+    "- The values in the \"Value\" column are expressed as thousands of units, as indicated by the \"UNIT\" column. Going forwared it will be assumed that all the values will be measured in Thousands. Hence removed the column\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "id": "d8ab3505",
@@ -1181,7 +1197,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "3686b344",
+   "id": "0036b8f2",
    "metadata": {},
    "outputs": [
     {
@@ -1239,7 +1255,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15077fef",
+   "id": "9fdee776",
    "metadata": {},
    "source": [
     "## Machine Learning Model Training"
@@ -1248,7 +1264,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "7a5c87f3",
+   "id": "d49170c8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1259,7 +1275,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "9bda5148",
+   "id": "f379019f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1270,7 +1286,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "5c2dd3ea",
+   "id": "9e8bc911",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1282,7 +1298,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "d6db1d87",
+   "id": "1902d335",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1297,7 +1313,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "6b0e91b1",
+   "id": "b2a0a644",
    "metadata": {},
    "outputs": [
     {
@@ -1318,7 +1334,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "af71c190",
+   "id": "ee98d11a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1331,7 +1347,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "388d75fa",
+   "id": "7110e1d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1346,7 +1362,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "db753db9",
+   "id": "743c900d",
    "metadata": {},
    "outputs": [
     {
@@ -1427,7 +1443,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "cb7a1e0b",
+   "id": "827046e6",
    "metadata": {},
    "outputs": [
     {
@@ -1507,7 +1523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ddb8d4ea",
+   "id": "c2eb5b0a",
    "metadata": {},
    "source": [
     "In the context of machine learning, the primary objective is typically to minimise error metrics, such as MSE and RMSE. The lower the values of MSE and RMSE, the better the predictive performance of the model.\n",
@@ -1528,7 +1544,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d881a8e",
+   "id": "58238bba",
    "metadata": {},
    "outputs": [],
    "source": []
