--- a/CA1_notebook.ipynb
+++ b/CA1_notebook.ipynb
@@ -1177,7 +1177,7 @@
    "id": "695e1e9f",
    "metadata": {},
    "source": [
-    "##### Population vs Net Migration\n",
+    "##### Population change vs Net Migration\n",
     "- High positive correlation between population change and net migration.\n",
     "- Indicates that changes in population are closely linked to migration patterns.\n",
     "- When net migration increases (more people moving in than out), overall population change rises, and vice versa.\n",
